test_suite/alan-2022-examples/failing/001590_mutation.alan
source F begin call f6l8a(65 array 89) end
